ros-sys/src/ros/ffi.rs

#[repr(C)]
#[derive(Copy, Clone)]
pub struct callback_queue {
    _unused: [u8; 0],
}
pub const CallOneResult_Called: CallOneResult = 0;
pub const CallOneResult_TryAgain: CallOneResult = 1;
pub const CallOneResult_Disabled: CallOneResult = 2;
pub const CallOneResult_Empty: CallOneResult = 3;
pub type CallOneResult = ::std::os::raw::c_uint;
extern "C" {
    pub fn callback_queue_create(enabled: bool) -> *mut callback_queue;
}
extern "C" {
    pub fn callback_queue_destroy(cq: *mut callback_queue);
}
extern "C" {
    #[doc = " \\brief Pop a single callback off the front of the queue and invoke it.  If the callback was not ready to be called,"]
    #[doc = " pushes it back onto the queue."]
    pub fn callback_queue_callOne(cq: *mut callback_queue) -> CallOneResult;
}
extern "C" {
    #[doc = " \\brief Invoke all callbacks currently in the queue.  If a callback was not ready to be called, pushes it back onto the queue."]
    pub fn callback_queue_callAvailable(cq: *mut callback_queue);
}
extern "C" {
    #[doc = " \\brief returns whether or not the queue is empty"]
    pub fn callback_queue_empty(cq: *mut callback_queue) -> bool;
}
extern "C" {
    #[doc = " \\brief returns whether or not the queue is empty"]
    pub fn callback_queue_isEmpty(cq: *mut callback_queue) -> bool;
}
extern "C" {
    #[doc = " \\brief Removes all callbacks from the queue.  Does \\b not wait for calls currently in progress to finish."]
    pub fn callback_queue_clear(cq: *mut callback_queue);
}
extern "C" {
    #[doc = " \\brief Enable the queue (queue is enabled by default)"]
    pub fn callback_queue_enable(cq: *mut callback_queue);
}
extern "C" {
    #[doc = " \\brief Disable the queue, meaning any calls to addCallback() will have no effect"]
    pub fn callback_queue_disable(cq: *mut callback_queue);
}
extern "C" {
    #[doc = " \\brief Returns whether or not this queue is enabled"]
    pub fn callback_queue_isEnabled(cq: *mut callback_queue) -> bool;
}
pub type wchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::std::os::raw::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[test]
fn bindgen_test_layout_max_align_t() {
    assert_eq!(
        ::std::mem::size_of::<max_align_t>(),
        32usize,
        concat!("Size of: ", stringify!(max_align_t))
    );
    assert_eq!(
        ::std::mem::align_of::<max_align_t>(),
        16usize,
        concat!("Alignment of ", stringify!(max_align_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<max_align_t>())).__clang_max_align_nonce1 as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<max_align_t>())).__clang_max_align_nonce2 as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(max_align_t),
            "::",
            stringify!(__clang_max_align_nonce2)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _binary_payload {
    pub payload: *const ::std::os::raw::c_uchar,
    pub size: usize,
}
#[test]
fn bindgen_test_layout__binary_payload() {
    assert_eq!(
        ::std::mem::size_of::<_binary_payload>(),
        16usize,
        concat!("Size of: ", stringify!(_binary_payload))
    );
    assert_eq!(
        ::std::mem::align_of::<_binary_payload>(),
        8usize,
        concat!("Alignment of ", stringify!(_binary_payload))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_binary_payload>())).payload as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_binary_payload),
            "::",
            stringify!(payload)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_binary_payload>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_binary_payload),
            "::",
            stringify!(size)
        )
    );
}
pub type binary_payload = _binary_payload;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _json_payload {
    pub payload: *const ::std::os::raw::c_char,
    pub size: usize,
}
#[test]
fn bindgen_test_layout__json_payload() {
    assert_eq!(
        ::std::mem::size_of::<_json_payload>(),
        16usize,
        concat!("Size of: ", stringify!(_json_payload))
    );
    assert_eq!(
        ::std::mem::align_of::<_json_payload>(),
        8usize,
        concat!("Alignment of ", stringify!(_json_payload))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_json_payload>())).payload as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_json_payload),
            "::",
            stringify!(payload)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_json_payload>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_json_payload),
            "::",
            stringify!(size)
        )
    );
}
pub type json_payload = _json_payload;
pub type callback = ::std::option::Option<
    unsafe extern "C" fn(
        phantom_data: *const ::std::os::raw::c_void,
        payload: *const json_payload,
        bin_payload: *const binary_payload,
    ),
>;
extern "C" {
    pub fn ros_disableAllSignalsInThisThread();
}
pub type __u_char = ::std::os::raw::c_uchar;
pub type __u_short = ::std::os::raw::c_ushort;
pub type __u_int = ::std::os::raw::c_uint;
pub type __u_long = ::std::os::raw::c_ulong;
pub type __int8_t = ::std::os::raw::c_schar;
pub type __uint8_t = ::std::os::raw::c_uchar;
pub type __int16_t = ::std::os::raw::c_short;
pub type __uint16_t = ::std::os::raw::c_ushort;
pub type __int32_t = ::std::os::raw::c_int;
pub type __uint32_t = ::std::os::raw::c_uint;
pub type __int64_t = ::std::os::raw::c_long;
pub type __uint64_t = ::std::os::raw::c_ulong;
pub type __quad_t = ::std::os::raw::c_long;
pub type __u_quad_t = ::std::os::raw::c_ulong;
pub type __intmax_t = ::std::os::raw::c_long;
pub type __uintmax_t = ::std::os::raw::c_ulong;
pub type __dev_t = ::std::os::raw::c_ulong;
pub type __uid_t = ::std::os::raw::c_uint;
pub type __gid_t = ::std::os::raw::c_uint;
pub type __ino_t = ::std::os::raw::c_ulong;
pub type __ino64_t = ::std::os::raw::c_ulong;
pub type __mode_t = ::std::os::raw::c_uint;
pub type __nlink_t = ::std::os::raw::c_ulong;
pub type __off_t = ::std::os::raw::c_long;
pub type __off64_t = ::std::os::raw::c_long;
pub type __pid_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct __fsid_t {
    pub __val: [::std::os::raw::c_int; 2usize],
}
#[test]
fn bindgen_test_layout___fsid_t() {
    assert_eq!(
        ::std::mem::size_of::<__fsid_t>(),
        8usize,
        concat!("Size of: ", stringify!(__fsid_t))
    );
    assert_eq!(
        ::std::mem::align_of::<__fsid_t>(),
        4usize,
        concat!("Alignment of ", stringify!(__fsid_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__fsid_t>())).__val as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__fsid_t),
            "::",
            stringify!(__val)
        )
    );
}
pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_long;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type __gwchar_t = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct imaxdiv_t {
    pub quot: ::std::os::raw::c_long,
    pub rem: ::std::os::raw::c_long,
}
#[test]
fn bindgen_test_layout_imaxdiv_t() {
    assert_eq!(
        ::std::mem::size_of::<imaxdiv_t>(),
        16usize,
        concat!("Size of: ", stringify!(imaxdiv_t))
    );
    assert_eq!(
        ::std::mem::align_of::<imaxdiv_t>(),
        8usize,
        concat!("Alignment of ", stringify!(imaxdiv_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<imaxdiv_t>())).quot as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(imaxdiv_t),
            "::",
            stringify!(quot)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<imaxdiv_t>())).rem as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(imaxdiv_t),
            "::",
            stringify!(rem)
        )
    );
}
extern "C" {
    pub fn imaxabs(__n: intmax_t) -> intmax_t;
}
extern "C" {
    pub fn imaxdiv(__numer: intmax_t, __denom: intmax_t) -> imaxdiv_t;
}
extern "C" {
    pub fn strtoimax(
        __nptr: *const ::std::os::raw::c_char,
        __endptr: *mut *mut ::std::os::raw::c_char,
        __base: ::std::os::raw::c_int,
    ) -> intmax_t;
}
extern "C" {
    pub fn strtoumax(
        __nptr: *const ::std::os::raw::c_char,
        __endptr: *mut *mut ::std::os::raw::c_char,
        __base: ::std::os::raw::c_int,
    ) -> uintmax_t;
}
extern "C" {
    pub fn wcstoimax(
        __nptr: *const __gwchar_t,
        __endptr: *mut *mut __gwchar_t,
        __base: ::std::os::raw::c_int,
    ) -> intmax_t;
}
extern "C" {
    pub fn wcstoumax(
        __nptr: *const __gwchar_t,
        __endptr: *mut *mut __gwchar_t,
        __base: ::std::os::raw::c_int,
    ) -> uintmax_t;
}
